--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(flatten)
 export(getObjects)
 export(getSlot)
 export(install.corpus)
+export(install.cwb)
 export(is.cqp)
 export(packaged.corpora)
 export(partitionBundle)
@@ -166,6 +167,7 @@ importFrom(tm,stopwords)
 importFrom(utils,View)
 importFrom(utils,available.packages)
 importFrom(utils,browseURL)
+importFrom(utils,capture.output)
 importFrom(utils,contrib.url)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
