--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,19 @@ importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(R6,R6Class)
+importFrom(RcppCWB,cl_attribute_size)
+importFrom(RcppCWB,cl_cpos2id)
+importFrom(RcppCWB,cl_cpos2lbound)
+importFrom(RcppCWB,cl_cpos2rbound)
+importFrom(RcppCWB,cl_cpos2struc)
+importFrom(RcppCWB,cl_id2cpos)
+importFrom(RcppCWB,cl_id2freq)
+importFrom(RcppCWB,cl_id2str)
+importFrom(RcppCWB,cl_lexicon_size)
+importFrom(RcppCWB,cl_regex2id)
+importFrom(RcppCWB,cl_str2id)
+importFrom(RcppCWB,cl_struc2cpos)
+importFrom(RcppCWB,cl_struc2str)
 importFrom(data.table,copy)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
