passing test on mac

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,27 +8,28 @@ export(CQI.perl)
 export(CQI.rcqp)
 export(CQI.super)
 export(Corpus)
-export(RegistryFile)
 export(as.corpusEnc)
 export(as.cqp)
 export(as.nativeEnc)
 export(as.regions)
 export(as.utf8)
 export(cooccurrences)
-export(copy.corpus)
+export(corpus_get_encoding)
+export(corpus_get_home)
+export(corpus_get_id)
+export(corpus_get_info)
+export(corpus_get_name)
+export(corpus_get_p_attributes)
+export(corpus_get_properties)
+export(corpus_get_s_attributes)
 export(flatten)
 export(getObjects)
 export(getSlot)
-export(install.corpus)
-export(install.cwb)
 export(is.cqp)
-export(packaged.corpora)
 export(partitionBundle)
 export(polmineR)
 export(print.html)
 export(punctuation)
-export(remove.corpus)
-export(rename.corpus)
 export(resetRegistry)
 export(startServer)
 export(use)
@@ -80,7 +81,6 @@ exportMethods(decode)
 exportMethods(dim)
 exportMethods(dispersion)
 exportMethods(dotplot)
-exportMethods(encode)
 exportMethods(encoding)
 exportMethods(enrich)
 exportMethods(features)
@@ -135,6 +135,7 @@ importFrom(RcppCWB,cl_attribute_size)
 importFrom(RcppCWB,cl_cpos2id)
 importFrom(RcppCWB,cl_cpos2lbound)
 importFrom(RcppCWB,cl_cpos2rbound)
+importFrom(RcppCWB,cl_cpos2str)
 importFrom(RcppCWB,cl_cpos2struc)
 importFrom(RcppCWB,cl_id2cpos)
 importFrom(RcppCWB,cl_id2freq)
@@ -146,7 +147,6 @@ importFrom(RcppCWB,cl_struc2cpos)
 importFrom(RcppCWB,cl_struc2str)
 importFrom(data.table,copy)
 importFrom(data.table,fread)
-importFrom(data.table,fwrite)
 importFrom(graphics,dotchart)
 importFrom(graphics,grid)
 importFrom(graphics,par)
@@ -166,6 +166,7 @@ importFrom(stats,ftable)
 importFrom(stats,setNames)
 importFrom(stats,xtabs)
 importFrom(stringi,stri_extract_all_boundaries)
+importFrom(stringi,stri_match_all_regex)
 importFrom(tm,DocumentTermMatrix)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,as.DocumentTermMatrix)
@@ -174,12 +175,9 @@ importFrom(tm,as.VCorpus)
 importFrom(tm,nDocs)
 importFrom(tm,stopwords)
 importFrom(utils,View)
-importFrom(utils,available.packages)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
-importFrom(utils,contrib.url)
 importFrom(utils,download.file)
-importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,localeToCharset)
 importFrom(utils,menu)
@@ -187,7 +185,6 @@ importFrom(utils,packageVersion)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
-importFrom(utils,unzip)
 importFrom(utils,write.csv)
 importFrom(xml2,"xml_attr<-")
 importFrom(xml2,"xml_text<-")
