rework and consolidation of terms-method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ importFrom(RcppCWB,cl_regex2id)
 importFrom(RcppCWB,cl_str2id)
 importFrom(RcppCWB,cl_struc2cpos)
 importFrom(RcppCWB,cl_struc2str)
+importFrom(RcppCWB,region_matrix_to_ids)
 importFrom(data.table,copy)
 importFrom(data.table,fread)
 importFrom(graphics,dotchart)
