getting RcppCWB backend work on windows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,8 @@
 
 S3method(print,html)
 export(.importPolMineCorpus)
-export(CQI.Rcpp)
+export(CQI.RcppCWB)
 export(CQI.cqpserver)
-export(CQI.perl)
 export(CQI.rcqp)
 export(CQI.super)
 export(Corpus)
@@ -14,14 +13,6 @@ export(as.nativeEnc)
 export(as.regions)
 export(as.utf8)
 export(cooccurrences)
-export(corpus_get_encoding)
-export(corpus_get_home)
-export(corpus_get_id)
-export(corpus_get_info)
-export(corpus_get_name)
-export(corpus_get_p_attributes)
-export(corpus_get_properties)
-export(corpus_get_s_attributes)
 export(flatten)
 export(getObjects)
 export(getSlot)
@@ -30,7 +21,15 @@ export(partitionBundle)
 export(polmineR)
 export(print.html)
 export(punctuation)
-export(resetRegistry)
+export(registry_get_encoding)
+export(registry_get_home)
+export(registry_get_id)
+export(registry_get_info)
+export(registry_get_name)
+export(registry_get_p_attributes)
+export(registry_get_properties)
+export(registry_get_s_attributes)
+export(registry_reset)
 export(startServer)
 export(use)
 exportClasses(TokenStream)
@@ -145,6 +144,13 @@ importFrom(RcppCWB,cl_regex2id)
 importFrom(RcppCWB,cl_str2id)
 importFrom(RcppCWB,cl_struc2cpos)
 importFrom(RcppCWB,cl_struc2str)
+importFrom(RcppCWB,cqp_dump_subcorpus)
+importFrom(RcppCWB,cqp_get_registry)
+importFrom(RcppCWB,cqp_initialize)
+importFrom(RcppCWB,cqp_is_initialized)
+importFrom(RcppCWB,cqp_query)
+importFrom(RcppCWB,cqp_reset_registry)
+importFrom(RcppCWB,get_region_matrix)
 importFrom(RcppCWB,region_matrix_to_ids)
 importFrom(data.table,copy)
 importFrom(data.table,fread)
