reviving shiny app

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,9 +27,11 @@ Suggests:
     sendmailR,
     knitr,
     shiny,
+    shinythemes,
     testthat,
     tidytext,
     magrittr
+Additional_repositories: http://polmine.sowi.uni-due.de/packages
 VignetteBuilder: knitr
 LazyData: yes
 Description: Library for corpus analysis using the Corpus Workbench as an
