--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,6 +162,7 @@ importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(parallel,detectCores)
 importFrom(pbapply,pblapply)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,col_sums)
