count for bundle

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ exportMethods(as.VCorpus)
 exportMethods(as.bundle)
 exportMethods(as.data.frame)
 exportMethods(as.data.table)
+exportMethods(as.list)
 exportMethods(as.markdown)
 exportMethods(as.matrix)
 exportMethods(as.partitionBundle)
