rework of as.speeches-method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(as.corpusEnc)
 export(as.cqp)
 export(as.nativeEnc)
 export(as.regions)
+export(as.speeches)
 export(as.utf8)
 export(cooccurrences)
 export(flatten)
@@ -64,7 +65,6 @@ exportMethods(as.markdown)
 exportMethods(as.matrix)
 exportMethods(as.partitionBundle)
 exportMethods(as.sparseMatrix)
-exportMethods(as.speeches)
 exportMethods(barplot)
 exportMethods(blapply)
 exportMethods(browse)
