is.partition-function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(flatten)
 export(getObjects)
 export(getSlot)
 export(is.cqp)
+export(is.partition)
 export(partitionBundle)
 export(polmineR)
 export(print.html)
