as.speeches documentation improved

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,7 @@ Collate:
     'count_class.R'
     'partition_class.R'
     'aggregate_method.R'
-    'bundle_class.R'
+    'bundle.R'
     'features_class.R'
     'context_class.R'
     'partitionBundle_class.R'
@@ -68,7 +68,7 @@ Collate:
     'contextBundle_class.R'
     'cooccurrences_class.R'
     'as.sparseMatrix_method.R'
-    'as.speeches_method.R'
+    'as.speeches.R'
     'blapply_method.R'
     'kwic_method.R'
     'kwic_class.R'
