all classes renamed to snake_case

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(Corpus)
 export(as.corpusEnc)
 export(as.cqp)
 export(as.nativeEnc)
+export(as.partitionBundle)
 export(as.regions)
 export(as.speeches)
 export(as.utf8)
@@ -23,6 +24,7 @@ export(is.cqp)
 export(is.partition)
 export(pAttributes)
 export(partitionBundle)
+export(partition_bundle)
 export(polmineR)
 export(print.html)
 export(punctuation)
@@ -42,7 +44,7 @@ export(use)
 exportClasses(bundle)
 exportClasses(context)
 exportClasses(cooccurrences)
-exportClasses(cooccurrencesBundle)
+exportClasses(cooccurrences_bundle)
 exportClasses(count)
 exportClasses(features)
 exportClasses(featuresCooccurrences)
@@ -51,7 +53,7 @@ exportClasses(hits)
 exportClasses(kwic)
 exportClasses(ngrams)
 exportClasses(partition)
-exportClasses(partitionBundle)
+exportClasses(partition_bundle)
 exportClasses(regions)
 exportClasses(tempcorpus)
 exportClasses(textstat)
@@ -70,7 +72,7 @@ exportMethods(as.data.table)
 exportMethods(as.list)
 exportMethods(as.markdown)
 exportMethods(as.matrix)
-exportMethods(as.partitionBundle)
+exportMethods(as.partition_bundle)
 exportMethods(as.sparseMatrix)
 exportMethods(barplot)
 exportMethods(blapply)
