--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,7 +55,7 @@ Collate:
     'polmineR.R'
     'count.R'
     'partition.R'
-    'partitionBundle.R'
+    'partition_bundle.R'
     'ngrams.R'
     'features.R'
     'context.R'
