small bug fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,6 @@ export(as.utf8)
 export(cooccurrences)
 export(flatten)
 export(getEncoding)
-export(getObjects)
 export(getSlot)
 export(getTerms)
 export(getTokenStream)
@@ -47,14 +46,15 @@ exportClasses(cooccurrences)
 exportClasses(cooccurrences_bundle)
 exportClasses(count)
 exportClasses(features)
-exportClasses(featuresCooccurrences)
-exportClasses(featuresNgrams)
+exportClasses(features_cooccurrences)
+exportClasses(features_ngrams)
 exportClasses(hits)
 exportClasses(kwic)
 exportClasses(ngrams)
 exportClasses(partition)
 exportClasses(partition_bundle)
 exportClasses(regions)
+exportClasses(subcorpus)
 exportClasses(tempcorpus)
 exportClasses(textstat)
 exportMethods("+")
