--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ exportMethods(enrich)
 exportMethods(features)
 exportMethods(getTemplate)
 exportMethods(get_token_stream)
+exportMethods(get_type)
 exportMethods(head)
 exportMethods(highlight)
 exportMethods(hist)
