--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(cooccurrences)
 export(flatten)
 export(getEncoding)
 export(getSlot)
+export(getTemplate)
 export(getTerms)
 export(getTokenStream)
 export(is.cqp)
@@ -38,6 +39,7 @@ export(registry_get_properties)
 export(registry_get_s_attributes)
 export(registry_reset)
 export(sAttributes)
+export(setTemplate)
 export(startServer)
 export(use)
 exportClasses(bundle)
@@ -45,6 +47,7 @@ exportClasses(context)
 exportClasses(cooccurrences)
 exportClasses(cooccurrences_bundle)
 exportClasses(count)
+exportClasses(count_bundle)
 exportClasses(features)
 exportClasses(features_cooccurrences)
 exportClasses(features_ngrams)
@@ -91,7 +94,7 @@ exportMethods(dotplot)
 exportMethods(encoding)
 exportMethods(enrich)
 exportMethods(features)
-exportMethods(getTemplate)
+exportMethods(get_template)
 exportMethods(get_token_stream)
 exportMethods(get_type)
 exportMethods(head)
@@ -116,7 +119,7 @@ exportMethods(read)
 exportMethods(round)
 exportMethods(s_attributes)
 exportMethods(sample)
-exportMethods(setTemplate)
+exportMethods(set_template)
 exportMethods(show)
 exportMethods(size)
 exportMethods(sort)
