--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,6 @@ export(as.utf8)
 export(cooccurrences)
 export(flatten)
 export(getEncoding)
-export(getSlot)
 export(getTemplate)
 export(getTerms)
 export(getTokenStream)
@@ -40,7 +39,6 @@ export(registry_get_s_attributes)
 export(registry_reset)
 export(sAttributes)
 export(setTemplate)
-export(startServer)
 export(use)
 exportClasses(bundle)
 exportClasses(context)
@@ -110,6 +108,7 @@ exportMethods(mail)
 exportMethods(merge)
 exportMethods(name)
 exportMethods(names)
+exportMethods(ncol)
 exportMethods(ngrams)
 exportMethods(noise)
 exportMethods(nrow)
