weigh-method tuned for sentiment analaysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(as.corpusEnc)
 export(as.cqp)
 export(as.nativeEnc)
 export(as.partitionBundle)
-export(as.regions)
 export(as.speeches)
 export(as.utf8)
 export(cooccurrences)
@@ -74,6 +73,7 @@ exportMethods(as.list)
 exportMethods(as.markdown)
 exportMethods(as.matrix)
 exportMethods(as.partition_bundle)
+exportMethods(as.regions)
 exportMethods(as.sparseMatrix)
 exportMethods(barplot)
 exportMethods(blapply)
