--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,6 +123,7 @@ exportMethods(show)
 exportMethods(size)
 exportMethods(sort)
 exportMethods(split)
+exportMethods(store)
 exportMethods(subset)
 exportMethods(summary)
 exportMethods(tail)
