some renaming of arguments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.VCorpus)
 exportMethods(as.bundle)
+exportMethods(as.character)
 exportMethods(as.data.frame)
 exportMethods(as.data.table)
 exportMethods(as.list)
