--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ exportMethods(highlight)
 exportMethods(hist)
 exportMethods(hits)
 exportMethods(html)
+exportMethods(knit_print)
 exportMethods(kwic)
 exportMethods(label)
 exportMethods(length)
@@ -173,6 +174,7 @@ importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(knitr,knit_print)
 importFrom(parallel,detectCores)
 importFrom(pbapply,pblapply)
 importFrom(slam,as.simple_triplet_matrix)
