--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ notifications:
   on_failure: change
 
 after_success:
-  - Rscript -e 'library(covr); codecov(token = "36cf23e7-4231-4329-b680-f052fece17dc")'
+  - Rscript -e 'covr::codecov(type = "all", token = "36cf23e7-4231-4329-b680-f052fece17dc")'
