temporary data directory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(as.partitionBundle)
 export(as.speeches)
 export(as.utf8)
 export(cooccurrences)
+export(data_dir)
 export(flatten)
 export(getEncoding)
 export(getTemplate)
@@ -185,6 +186,7 @@ importFrom(stats,formula)
 importFrom(stats,ftable)
 importFrom(stats,setNames)
 importFrom(stats,xtabs)
+importFrom(stringi,stri_enc_mark)
 importFrom(stringi,stri_extract_all_boundaries)
 importFrom(stringi,stri_match_all_regex)
 importFrom(tm,DocumentTermMatrix)
