selective import from data.table package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,7 +134,6 @@ exportMethods(terms)
 exportMethods(tooltips)
 exportMethods(view)
 exportMethods(weigh)
-import(data.table)
 import(methods)
 importFrom(DT,datatable)
 importFrom(DT,formatStyle)
@@ -164,8 +163,18 @@ importFrom(RcppCWB,cqp_query)
 importFrom(RcppCWB,cqp_reset_registry)
 importFrom(RcppCWB,get_region_matrix)
 importFrom(RcppCWB,region_matrix_to_ids)
+importFrom(data.table,as.data.table)
 importFrom(data.table,copy)
+importFrom(data.table,data.table)
+importFrom(data.table,dcast)
+importFrom(data.table,dcast.data.table)
 importFrom(data.table,fread)
+importFrom(data.table,rbindlist)
+importFrom(data.table,setcolorder)
+importFrom(data.table,setkey)
+importFrom(data.table,setkeyv)
+importFrom(data.table,setnames)
+importFrom(data.table,setorderv)
 importFrom(graphics,dotchart)
 importFrom(graphics,grid)
 importFrom(graphics,par)
