--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(CQI.super)
 export(Corpus)
 export(as.corpusEnc)
 export(as.cqp)
+export(as.data.table.bundle)
+export(as.data.table.regions)
+export(as.data.table.textstat)
 export(as.nativeEnc)
 export(as.partitionBundle)
 export(as.speeches)
@@ -70,7 +73,6 @@ exportMethods(as.VCorpus)
 exportMethods(as.bundle)
 exportMethods(as.character)
 exportMethods(as.data.frame)
-exportMethods(as.data.table)
 exportMethods(as.list)
 exportMethods(as.markdown)
 exportMethods(as.matrix)
@@ -94,6 +96,7 @@ exportMethods(dotplot)
 exportMethods(encoding)
 exportMethods(enrich)
 exportMethods(features)
+exportMethods(format)
 exportMethods(get_template)
 exportMethods(get_token_stream)
 exportMethods(get_type)
