--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(.importPolMineCorpus)
 export(CQI.RcppCWB)
 export(CQI.cqpserver)
 export(CQI.super)
+export(Cooccurrences)
 export(Corpus)
 export(as.corpusEnc)
 export(as.cqp)
@@ -164,6 +165,7 @@ importFrom(RcppCWB,cqp_initialize)
 importFrom(RcppCWB,cqp_is_initialized)
 importFrom(RcppCWB,cqp_query)
 importFrom(RcppCWB,cqp_reset_registry)
+importFrom(RcppCWB,get_cbow_matrix)
 importFrom(RcppCWB,get_region_matrix)
 importFrom(RcppCWB,region_matrix_to_ids)
 importFrom(data.table,as.data.table)
@@ -172,6 +174,7 @@ importFrom(data.table,data.table)
 importFrom(data.table,dcast)
 importFrom(data.table,dcast.data.table)
 importFrom(data.table,fread)
+importFrom(data.table,melt.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setkey)
@@ -189,6 +192,8 @@ importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(knitr,knit_print)
 importFrom(parallel,detectCores)
+importFrom(parallel,mccollect)
+importFrom(parallel,mcparallel)
 importFrom(pbapply,pblapply)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,col_sums)
