Cooccurrences passing checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(.importPolMineCorpus)
 export(CQI.RcppCWB)
 export(CQI.cqpserver)
 export(CQI.super)
-export(Cooccurrences)
 export(Corpus)
 export(as.corpusEnc)
 export(as.cqp)
@@ -44,6 +43,7 @@ export(registry_reset)
 export(sAttributes)
 export(setTemplate)
 export(use)
+exportClasses(Cooccurrences)
 exportClasses(bundle)
 exportClasses(context)
 exportClasses(cooccurrences)
@@ -67,6 +67,7 @@ exportMethods("[")
 exportMethods("[[")
 exportMethods("name<-")
 exportMethods("names<-")
+exportMethods(Cooccurrences)
 exportMethods(aggregate)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermDocumentMatrix)
@@ -79,6 +80,7 @@ exportMethods(as.markdown)
 exportMethods(as.matrix)
 exportMethods(as.partition_bundle)
 exportMethods(as.regions)
+exportMethods(as.simple_triplet_matrix)
 exportMethods(as.sparseMatrix)
 exportMethods(barplot)
 exportMethods(blapply)
