ll and decode with reference logic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(as.nativeEnc)
 export(as.partitionBundle)
 export(as.speeches)
 export(as.utf8)
+export(as_igraph)
 export(cooccurrences)
 export(data_dir)
 export(flatten)
