Cooccurrences functionality for multiple p-attributes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -196,6 +196,7 @@ importFrom(jsonlite,toJSON)
 importFrom(knitr,knit_print)
 importFrom(parallel,detectCores)
 importFrom(parallel,mccollect)
+importFrom(parallel,mclapply)
 importFrom(parallel,mcparallel)
 importFrom(pbapply,pblapply)
 importFrom(slam,as.simple_triplet_matrix)
