--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(as.nativeEnc)
 export(as.partitionBundle)
 export(as.speeches)
 export(as.utf8)
-export(as_igraph)
 export(cooccurrences)
 export(data_dir)
 export(flatten)
@@ -83,6 +82,7 @@ exportMethods(as.partition_bundle)
 exportMethods(as.regions)
 exportMethods(as.simple_triplet_matrix)
 exportMethods(as.sparseMatrix)
+exportMethods(as_igraph)
 exportMethods(barplot)
 exportMethods(blapply)
 exportMethods(browse)
