new bundle functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,9 +62,12 @@ exportClasses(regions)
 exportClasses(subcorpus)
 exportClasses(tempcorpus)
 exportClasses(textstat)
+exportMethods("$")
+exportMethods("$<-")
 exportMethods("+")
 exportMethods("[")
 exportMethods("[[")
+exportMethods("[[<-")
 exportMethods("name<-")
 exportMethods("names<-")
 exportMethods(Cooccurrences)
