--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,6 +175,7 @@ importFrom(RcppCWB,get_cbow_matrix)
 importFrom(RcppCWB,get_region_matrix)
 importFrom(RcppCWB,region_matrix_to_ids)
 importFrom(data.table,as.data.table)
+importFrom(data.table,between)
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
