rework of cooccurrences, passing checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,13 +67,11 @@ Collate:
     'as.markdown.R'
     'kwic.R'
     'decode.R'
-    'll.R'
     'cooccurrences.R'
     'as.sparseMatrix.R'
     'as.speeches.R'
     'blapply.R'
     'browse.R'
-    'chisquare.R'
     'hits.R'
     'tempcorpus.R'
     'cpos.R'
@@ -89,7 +87,6 @@ Collate:
     'mail.R'
     'means.R'
     'noise.R'
-    'pmi.R'
     'regions.R'
     'read.R'
     'registry.R'
@@ -97,6 +94,7 @@ Collate:
     'renamed.R'
     's_attributes.R'
     'size.R'
+    'stats.R'
     'store.R'
     't_test.R'
     'templates.R'
