tests not yet passed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(sAttributes)
 export(setTemplate)
 export(use)
 exportClasses(Cooccurrences)
+exportClasses(CorpusOrSubcorpus)
 exportClasses(bundle)
 exportClasses(context)
 exportClasses(cooccurrences)
