towards nonstandard evaluation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ exportClasses(bundle)
 exportClasses(context)
 exportClasses(cooccurrences)
 exportClasses(cooccurrences_bundle)
+exportClasses(corpus)
 exportClasses(count)
 exportClasses(count_bundle)
 exportClasses(features)
@@ -64,9 +65,12 @@ exportClasses(regions)
 exportClasses(subcorpus)
 exportClasses(tempcorpus)
 exportClasses(textstat)
+exportMethods("!=")
 exportMethods("$")
 exportMethods("$<-")
+exportMethods("%in%")
 exportMethods("+")
+exportMethods("==")
 exportMethods("[")
 exportMethods("[[")
 exportMethods("[[<-")
@@ -146,6 +150,7 @@ exportMethods(terms)
 exportMethods(tooltips)
 exportMethods(view)
 exportMethods(weigh)
+exportMethods(zoom)
 import(methods)
 importFrom(DT,datatable)
 importFrom(DT,formatStyle)
@@ -183,6 +188,7 @@ importFrom(data.table,data.table)
 importFrom(data.table,dcast)
 importFrom(data.table,dcast.data.table)
 importFrom(data.table,fread)
+importFrom(data.table,key)
 importFrom(data.table,melt.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
