subcorpus class introduced

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,7 +62,7 @@ exportClasses(ngrams)
 exportClasses(partition)
 exportClasses(partition_bundle)
 exportClasses(regions)
-exportClasses(subcorpus)
+exportClasses(slice)
 exportClasses(tempcorpus)
 exportClasses(textstat)
 exportMethods("!=")
