--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,64 +50,17 @@ License: GPL-3
 URL: https://www.github.com/PolMine/polmineR
 Encoding: UTF-8
 Collate: 
-    'CQI.R'
-    'Labels.R'
-    'polmineR.R'
-    'S4classes.R'
-    'p_attributes.R'
-    'textstat.R'
-    'bundle.R'
-    'corpus.R'
-    'count.R'
-    'partition.R'
-    'partition_bundle.R'
-    'ngrams.R'
-    'features.R'
-    'context.R'
-    'TermDocumentMatrix.R'
-    'as.VCorpus.R'
-    'as.markdown.R'
-    'kwic.R'
-    'decode.R'
-    'cooccurrences.R'
-    'as.sparseMatrix.R'
-    'as.speeches.R'
-    'blapply.R'
-    'browse.R'
-    'coerce.R'
-    'hits.R'
-    'tempcorpus.R'
-    'cpos.R'
-    'cqpserver.R'
-    'dispersion.R'
-    'dotplot.R'
-    'encoding.R'
-    'enrich.R'
-    'format.R'
-    'highlight.R'
-    'html.R'
-    'label.R'
-    'mail.R'
-    'means.R'
-    'noise.R'
-    'regions.R'
-    'read.R'
-    'registry.R'
-    'reindex.R'
-    'renamed.R'
-    's_attributes.R'
-    'size.R'
-    'stats.R'
-    'store.R'
-    'templates.R'
-    'terms.R'
-    'token_stream.R'
-    'tooltips.R'
-    'trim.R'
-    'type.R'
-    'use.R'
-    'utils.R'
-    'view.R'
-    'weigh.R'
-    'zzz.R'
+    'CQI.R' 'Labels.R' 'polmineR.R' 'S4classes.R' 'p_attributes.R'
+    'textstat.R' 'bundle.R' 'corpus.R' 'count.R' 'partition.R'
+    'partition_bundle.R' 'ngrams.R' 'features.R' 'context.R'
+    'TermDocumentMatrix.R' 'as.VCorpus.R' 'as.markdown.R'
+    'kwic.R' 'decode.R' 'cooccurrences.R' 'as.sparseMatrix.R'
+    'as.speeches.R' 'blapply.R' 'browse.R' 'coerce.R' 'hits.R'
+    'tempcorpus.R' 'cpos.R' 'cqpserver.R' 'dispersion.R' 'dotplot.R'
+    'encoding.R' 'enrich.R' 'format.R' 'highlight.R' 'html.R'
+    'label.R' 'mail.R' 'means.R' 'noise.R' 'regions.R' 'read.R'
+    'registry.R' 'reindex.R' 'renamed.R' 's_attributes.R' 'size.R'
+    'stats.R''store.R' 'templates.R' 'terms.R' 'token_stream.R'
+    'tooltips.R' 'trim.R' 'type.R' 'use.R' 'utils.R' 'view.R'
+    'weigh.R' 'zzz.R'
 RoxygenNote: 6.1.1
