opencpu proof of concept

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ exportClasses(ngrams)
 exportClasses(partition)
 exportClasses(partition_bundle)
 exportClasses(regions)
+exportClasses(remote_corpus)
 exportClasses(slice)
 exportClasses(tempcorpus)
 exportClasses(textstat)
