expanded exposed methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(getTerms)
 export(getTokenStream)
 export(is.cqp)
 export(is.partition)
+export(ocpu_exec)
 export(pAttributes)
 export(partitionBundle)
 export(partition_bundle)
@@ -63,6 +64,7 @@ exportClasses(partition)
 exportClasses(partition_bundle)
 exportClasses(regions)
 exportClasses(remote_corpus)
+exportClasses(remote_partition)
 exportClasses(slice)
 exportClasses(tempcorpus)
 exportClasses(textstat)
