remote_subcorpus class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ exportClasses(partition_bundle)
 exportClasses(regions)
 exportClasses(remote_corpus)
 exportClasses(remote_partition)
+exportClasses(remote_subcorpus)
 exportClasses(slice)
 exportClasses(tempcorpus)
 exportClasses(textstat)
