--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,7 +44,7 @@ export(registry_get_s_attributes)
 export(registry_reset)
 export(sAttributes)
 export(setTemplate)
-export(subset2)
+export(subcorpus)
 export(use)
 exportClasses(Cooccurrences)
 exportClasses(CorpusOrSubcorpus)
