--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(registry_get_properties)
 export(registry_get_s_attributes)
 export(registry_reset)
 export(sAttributes)
+export(s_attributes_stop_if_nested)
 export(setTemplate)
 export(subcorpus)
 export(use)
