--- a/NAMESPACE
+++ b/NAMESPACE
@@ -193,6 +193,7 @@ importFrom(data.table,key)
 importFrom(data.table,melt.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
+importFrom(data.table,setindexv)
 importFrom(data.table,setkey)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
