expanding test coverage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(as.nativeEnc)
 export(as.partitionBundle)
 export(as.speeches)
 export(as.utf8)
+export(browse)
 export(check_cqp_query)
 export(cooccurrences)
 export(data_dir)
@@ -64,14 +65,10 @@ exportClasses(remote_corpus)
 exportClasses(remote_partition)
 exportClasses(remote_subcorpus)
 exportClasses(slice)
-exportClasses(tempcorpus)
 exportClasses(textstat)
-exportMethods("!=")
 exportMethods("$")
 exportMethods("$<-")
-exportMethods("%in%")
 exportMethods("+")
-exportMethods("==")
 exportMethods("[")
 exportMethods("[[")
 exportMethods("[[<-")
@@ -95,7 +92,6 @@ exportMethods(as.sparseMatrix)
 exportMethods(as_igraph)
 exportMethods(barplot)
 exportMethods(blapply)
-exportMethods(browse)
 exportMethods(chisquare)
 exportMethods(colnames)
 exportMethods(context)
@@ -151,7 +147,6 @@ exportMethods(terms)
 exportMethods(tooltips)
 exportMethods(view)
 exportMethods(weigh)
-exportMethods(zoom)
 import(methods)
 importFrom(DT,datatable)
 importFrom(DT,formatStyle)
