--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(as.data.table.regions)
 export(as.data.table.textstat)
 export(as.nativeEnc)
 export(as.partitionBundle)
-export(as.speeches)
 export(as.utf8)
 export(browse)
 export(check_cqp_query)
@@ -90,6 +89,7 @@ exportMethods(as.partition_bundle)
 exportMethods(as.regions)
 exportMethods(as.simple_triplet_matrix)
 exportMethods(as.sparseMatrix)
+exportMethods(as.speeches)
 exportMethods(as_igraph)
 exportMethods(barplot)
 exportMethods(blapply)
