label-method for kwic working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,8 +150,10 @@ exportMethods(tooltips)
 exportMethods(view)
 exportMethods(weigh)
 import(methods)
+importFrom(DT,dataTableProxy)
 importFrom(DT,datatable)
 importFrom(DT,formatStyle)
+importFrom(DT,replaceData)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
