--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: Toolkit for Corpus Analysis
-Version: 0.7.11.9012
-Date: 2019-04-15
+Version: 0.7.11.9013
+Date: 2019-04-27
 Authors@R: c(person("Andreas", "Blaette", role = c("aut", "cre"), email = "andreas.blaette@uni-due.de", comment = c(ORCID = "0000-0001-8970-8010")))
 Imports:
     methods,
@@ -29,6 +29,7 @@ Suggests:
     sendmailR,
     shiny,
     shinythemes,
+    miniUI,
     testthat,
     tidytext,
     covr,
