before creating subset documentation´

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,7 +75,9 @@ exportMethods("[[")
 exportMethods("[[<-")
 exportMethods("name<-")
 exportMethods("names<-")
+exportMethods(Asign)
 exportMethods(Cooccurrences)
+exportMethods(a)
 exportMethods(aggregate)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermDocumentMatrix)
@@ -95,6 +97,7 @@ exportMethods(as_igraph)
 exportMethods(barplot)
 exportMethods(blapply)
 exportMethods(chisquare)
+exportMethods(class)
 exportMethods(colnames)
 exportMethods(context)
 exportMethods(cooccurrences)
@@ -130,6 +133,7 @@ exportMethods(ncol)
 exportMethods(ngrams)
 exportMethods(noise)
 exportMethods(nrow)
+exportMethods(object.)
 exportMethods(p_attributes)
 exportMethods(partition)
 exportMethods(read)
@@ -142,10 +146,12 @@ exportMethods(size)
 exportMethods(sort)
 exportMethods(split)
 exportMethods(store)
+exportMethods(subcorpus)
 exportMethods(subset)
 exportMethods(summary)
 exportMethods(tail)
 exportMethods(terms)
+exportMethods(to)
 exportMethods(tooltips)
 exportMethods(view)
 exportMethods(weigh)
