rework of documentation of corpus-class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ exportMethods(encoding)
 exportMethods(enrich)
 exportMethods(features)
 exportMethods(format)
+exportMethods(get_corpus)
 exportMethods(get_template)
 exportMethods(get_token_stream)
 exportMethods(get_type)
