--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ exportMethods(html)
 exportMethods(knit_print)
 exportMethods(kwic)
 exportMethods(label)
+exportMethods(labels)
 exportMethods(length)
 exportMethods(ll)
 exportMethods(mail)
