--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(getEncoding)
 export(getTemplate)
 export(getTerms)
 export(getTokenStream)
+export(get_info)
 export(is.cqp)
 export(is.partition)
 export(ocpu_exec)
