--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(registry_get_s_attributes)
 export(registry_reset)
 export(sAttributes)
 export(setTemplate)
+export(show_info)
 export(use)
 exportClasses(Cooccurrences)
 exportClasses(bundle)
